# rules-lawyer-models

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  docker_clean.sh  pyproject.toml
.devcontainer/: allowed_signers  devcontainer.json  git_signing_key.pub  postCreate.sh
.devcontainer/shell/: uv_guard.sh
.research/: dataset_description-reddit_rpg_rules_question_classification.md  metrics_and_reporting_design.md  qwen_training_guide.md  system_prmopt.md  training_parameter_info.md  unsloth_fine_tuning_official.md
.scripts/: do_sync.sh
docker/: Dockerfile  install_unsloth.py
evaluation/: __init__.py  binary_classification.py  binary_classification_metric.py  logger_metrics_reporter.py  metric_calculator.py  metric_manager.py  metric_protocol.py  metric_reporting.py  metric_result.py  metrics_reporting_manager.py  model_generator.py  wandb_metrics_reporter.py
fragments/: chat_template_alpaca.md  eval_template_alpaca.md  imdb_test_prompt.md  rpg_post_classification_prompt.md
src/rules_lawyer_models/: __init__.py  __main__.py
src/rules_lawyer_models/commands/: __init__.py  analyze_sequence_lengths.py  (+7 more)
tests/unit/: test_binary_classification.py  test_binary_text_classification_aggregators.py  test_binary_text_classification_metric.py  test_cli.py  test_dataset_helper.py  test_sweep.py  test_template_helper.py
wandb/: latest-run
wandb/run-20260209_200830-h7lwn5un/: run-h7lwn5un.wandb
wandb/run-20260209_200947-mcrdxjys/: run-mcrdxjys.wandb
wandb/run-20260209_201416-5qi7ueos/: run-5qi7ueos.wandb
wandb/run-20260209_201425-qw00m77u/: run-qw00m77u.wandb
wandb/run-20260209_201435-762pxlxh/: run-762pxlxh.wandb
wandb/run-20260209_201440-d3mpyncj/: run-d3mpyncj.wandb
wandb/run-20260209_201445-kfiewa6h/: run-kfiewa6h.wandb
wandb/run-20260209_201450-diuw84ow/: run-diuw84ow.wandb
wandb/run-20260209_201455-bbaz4c28/: run-bbaz4c28.wandb
wandb/run-20260209_201500-yyos99t9/: run-yyos99t9.wandb
wandb/run-20260209_201505-8y2lfk7u/: run-8y2lfk7u.wandb
wandb/run-20260209_201510-6q4msldm/: run-6q4msldm.wandb
wandb/run-20260209_201516-5zjzpbt8/: run-5zjzpbt8.wandb
wandb/run-20260209_201522-g6iremev/: run-g6iremev.wandb
wandb/run-20260209_201528-ej71z7nb/: run-ej71z7nb.wandb
wandb/run-20260209_201534-anzs3ppa/: run-anzs3ppa.wandb
wandb/run-20260209_201540-hl1cxewl/: run-hl1cxewl.wandb
wandb/run-20260209_201545-jufgr5x5/: run-jufgr5x5.wandb
wandb/run-20260209_201551-1ck2nolr/: run-1ck2nolr.wandb
wandb/run-20260209_201557-8ovjhthn/: run-8ovjhthn.wandb
wandb/run-20260209_201603-a6o8c9fu/: run-a6o8c9fu.wandb
wandb/run-20260209_201610-wkuo2epl/: run-wkuo2epl.wandb
wandb/run-20260209_201654-7gr7j7hn/: run-7gr7j7hn.wandb
wandb/run-20260209_201714-3he1tztx/: run-3he1tztx.wandb
(+133 files in other folders)
