[project]
name = "rules-lawyer-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Saltwell", email = "erik.saltwell@gmail.com" },
]
requires-python = "==3.11.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "six==1.17.0",
    "huggingface-hub==0.36.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "urllib3==2.6.3",
    "h11==0.16.0",
    "dill==0.4.0",
    "numpy==2.4.1",
    "tokenizers==0.22.2",
    "tqdm==4.67.1",
    "hf-xet==1.2.0",
    "packaging==26.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "anyio==4.12.1",
    "httpcore==1.0.9",
    "multiprocess==0.70.16",
    "pandas==3.0.0",
    "zipp==3.23.0",
    "regex==2026.1.15",
    "safetensors==0.7.0",
    "psutil==7.2.1",
    "httpx==0.28.1",
    "pyarrow==23.0.0",
    "xxhash==3.6.0",
    "importlib-metadata==8.7.1",
    "pillow==11.3.0",
    "accelerate==1.12.0",
    "transformers==4.57.1",
    "datasets==4.3.0",
    "docstring-parser==0.17.0",
    "typeguard==4.4.4",
    "cut-cross-entropy==25.1.1",
    "hf-transfer==0.1.9",
    "msgspec==0.20.0",
    "peft==0.18.1",
    "protobuf==6.33.4",
    "sentencepiece==0.2.1",
    "torchao==0.14.1",
    "trl==0.23.1",
    "tyro==1.0.5",
    "bitsandbytes==0.49.1",
    "diffusers==0.36.0",
    "xformers==0.0.33.post1",
    "unsloth-zoo==2026.1.4",
    "unsloth==2026.1.4",
    "click>=8.3.1",
]

[project.scripts]
rules-lawyer-models = "rules_lawyer_models.console:main.app"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ssort>=0.16.0",
]


[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q -s"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
exclude = [
  "^build/",
  "^dist/",
  "^generated/",
  "^vendor/",
  "^\\.venv/",
  "venv",
  "unsloth_compiled_cache"
]

# Reasonable signal without going full-strict
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = false

no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# Keep third-party stubs explicit (we'll add types-* as needed)
ignore_missing_imports = true

# Nice for CLI apps with a src/ layout
mypy_path = ["src"]
packages = ["rules_lawyer_models"]

